Fix: overflowing issue for aside section.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -188,6 +188,15 @@
 
     .aside-buttons {
         min-height: var(--aside-height);
+        max-height: var(--aside-height);
+        overflow: scroll;
+        overflow-y: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+
+        &::-webkit-scrollbar {
+            display: none;
+        }
     }
 
     .aside-button-icons {
